Fix LaTeX syntax in vectors_es.html

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -274,7 +274,7 @@
                 </p>
 				<p>
 					\begin{flalign}
-						\(\vec v =  x\hat{\imath} + y\hat{\jmath} + z\hat{k}\) \label{eq:9_2}
+						\vec v =  x\hat{\imath} + y\hat{\jmath} + z\hat{k} \label{eq:9_2}
 					\end{flalign}
 				</p>
                 <p>
@@ -291,7 +291,7 @@
                 </p>
 				<p>
 					\begin{flalign}
-						\(\vec v\cdot\vec w = x_1\cdot x_2 + y_1\cdot y_2 + z_1\cdot z_2\) \label{eq:10_1}
+						\vec v\cdot\vec w = x_1\cdot x_2 + y_1\cdot y_2 + z_1\cdot z_2 \label{eq:10_1}
 					\end{flalign}
 				</p>
                 <p>
@@ -299,7 +299,7 @@
                 </p>
 				<p>
 					\begin{flalign}
-						\(\vec v\cdot\vec w = \Vert\vec v\Vert\cdot\Vert\vec w\Vert\cos\theta\) \label{eq:10_2}
+						\vec v\cdot\vec w = \Vert\vec v\Vert\cdot\Vert\vec w\Vert\cos\theta \label{eq:10_2}
 					\end{flalign}
 				</p>
                 <p>
